--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Antonio:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Antonio:wght@300;400;500;600;700&display=swap");
 
 /* font-family: 'Caveat', cursive;
 font-family: 'Antonio', sans-serif;*/
@@ -16,22 +16,23 @@ font-family: 'Antonio', sans-serif;*/
     font-family: Lemon;
     src: url(../fonts/Lemon\ Tuesday.otf);
 }
-html{
+html {
     scroll-behavior: smooth;
 }
-body{
-    min-height: 800vh;
+body {
+    min-height: 700vh;
 }
 
 /* ----- BODY PARALLAX -----  */
-.parallax{
+.parallax {
     background: url(../img/greybg.jpg) center/cover no-repeat;
     background-attachment: fixed;
 }
 
 /* ----- HEADER  NAVBAR BACKGROUND ----- */
 /* ../img/goldbk.jpg */
-header{
+header,
+footer {
     background: url(../img/bg2snip.jpg) center/cover no-repeat;
     opacity: 0.9;
     /* background-color: #cac1b9; */
@@ -39,26 +40,26 @@ header{
 }
 
 /* ----- WAPPEN ----- */
-header .Wappen{
+.Wappen {
     border-radius: 50%;
     width: 90px;
 }
 
-header nav ul li:first-of-type{
-    font-family: 'Antonio', sans-serif;
+nav ul li:first-of-type {
+    font-family: "Antonio", sans-serif;
     text-align: center;
     color: white;
     font-size: 12px;
 }
 
-header h1{
+h1 {
     padding-top: 10px;
 }
+
 /* ----- ENDE WAPPEN ----- */
 
-
 /* ----- NAVBAR ABOUT WORK CONTACT -----  */
-header nav ul li{
+nav ul li {
     display: inline-block;
     padding-right: 80px;
     padding-left: 10%;
@@ -67,22 +68,17 @@ header nav ul li{
     margin-bottom: 35px;
 }
 
-
-header a{
+a {
     text-decoration: none;
-    font-family: 'Antonio', sans-serif;
-    /* font-family: 'Times New Roman', Times, serif; */
-    /* font-family: 'Caveat', cursive; */
-    /* font-family: 'Roboto', sans-serif; */
+    font-family: "Antonio", sans-serif;
     font-size: 28px;
     font-weight: 500;
     color: white;
     transition: 1s;
-    /* text-transform: uppercase; */
 }
 
 /* ----- HOVER NAVBAR ----- */
-header nav ul li a:hover{
+nav ul li a:hover {
     font-size: 38px;
     text-shadow: 0px 0px 3px white;
     transition: 0.6s;
@@ -90,36 +86,36 @@ header nav ul li a:hover{
 }
 
 /* ----- ABOUT ABOUT ABOUT ----- */
-main section{
+main section {
     font-family: Lemon;
 }
 
 /* Außergewöhnlich Schöne Kunst.... h2 */
 
-main h2{
+main h2 {
     font-size: 45px;
     margin-top: 13%;
     margin-left: 84px;
     font-weight: 500;
     text-shadow: 2px 0px 3px rgba(150, 150, 150, 1);
-    opacity: 0.60;
+    opacity: 0.6;
     /* Ging schneller mit opacity als den Colorpicker zu benutzen :P  */
 }
 
 /* by Jen Posomorat h3 */
 
-main h3{
+main h3 {
     font-size: 28px;
     margin-left: 30%;
     padding-top: 6px;
     font-weight: 100;
     /* text-shadow: 2px 0px 3px rgba(150, 150, 150, 1); */
     letter-spacing: 2px;
-    opacity: 0.40;
+    opacity: 0.4;
 }
 
 /* ---------- ABOUT BILD 1 JEN ---------- */
-main .jen{
+main .jen {
     width: 30%;
     float: right;
     margin-top: 4%;
@@ -130,7 +126,7 @@ main .jen{
 }
 
 /* ---------- ABOUT BILD 2 BRUSH ---------- */
-main .brush{
+main .brush {
     float: right;
     width: 27%;
     margin-top: 8%;
@@ -143,8 +139,8 @@ main .brush{
 
 /* MAIN ARTICLE  */
 
-main .lorem{
-    font-family: 'Times New Roman', Times, serif;
+main .lorem {
+    font-family: "Times New Roman", Times, serif;
     font-size: 25px;
     text-align: justify;
     letter-spacing: 1px;
@@ -154,9 +150,9 @@ main .lorem{
 }
 
 /* ---------- JUMP TO TOP ---------- */
-section .jump{
+section .jump {
     /* font-family: 'Times New Roman', Times, serif; */
-    font-family: 'Antonio', sans-serif;
+    font-family: "Antonio", sans-serif;
     font-size: 25px;
     text-decoration: none;
     /* color: #e0973f; */
@@ -170,13 +166,13 @@ section .jump{
     opacity: 0.5;
 }
 /* ---------- BORDER BOTTOM ----------  */
-main article{
+main article {
     border-bottom: 1px solid rgba(150, 150, 150, 1);
     padding-bottom: 270px;
 }
 /* ---------- WORK WORK WORK ----------  */
 
-.work{
+.work {
     font-size: 70px;
     margin-top: 110px;
     margin-left: 80px;
@@ -187,25 +183,24 @@ main article{
     /* letter-spacing: px ; */
 }
 
-main span{
+main span {
     font-size: 25px;
     font-weight: 100;
     padding-left: 10px;
     text-transform: none;
     text-shadow: 2px 0px 3px rgba(150, 150, 150, 1);
     letter-spacing: 5px;
-
 }
 
-figure{
+figure {
     display: inline-block;
 }
 
-figure figcaption{
-display: inline-block;
+figure figcaption {
+    display: inline-block;
 }
 
-main #room img{
+main #room img {
     margin-left: 13%;
     margin-top: 60px;
     margin-bottom: 10%;
@@ -216,21 +211,21 @@ main #room img{
     transition: 0.8s;
 }
 
-main #room img:hover{
+main #room img:hover {
     height: 450px;
     width: 35%;
     transition: 1ss;
     box-shadow: 2px 2px 8px 6px #88888883;
 }
 
-section #room{
+section #room {
     border-bottom: 1px solid rgba(150, 150, 150, 1);
     padding-bottom: 270px;
 }
 
- article a{
+article a {
     /* font-family: 'Times New Roman', Times, serif; */
-    font-family: 'Antonio', sans-serif;
+    font-family: "Antonio", sans-serif;
     font-size: 25px;
     text-decoration: none;
     /* color: #e0973f; */
@@ -244,25 +239,30 @@ section #room{
     opacity: 0.5;
 }
 
-#contact h3{
+/* ============ CONTACT AREA ============= */
+
+#contact {
+    padding-bottom: 10%;
+}
+#contact h3 {
     margin-top: 5%;
     margin-left: 36%;
     font-size: 50px;
     opacity: 0.55;
 }
-#contact p{
-    font-family: 'Antonio', sans-serif;
+#contact p {
+    font-family: "Antonio", sans-serif;
     font-size: 17px;
     text-align: center;
     padding-top: 20px;
     padding-bottom: 15px;
 }
-form{
+form {
     text-align: center;
     margin-top: 15px;
 }
 
-#mail{
+#mail {
     /* font-family: 'Antonio', sans-serif; */
     text-align: center;
     border: 1px solid lightgrey;
@@ -272,14 +272,14 @@ form{
     box-shadow: 1px 1px 8px 1px #888888;
     transition: 1s;
 }
-#mail:hover{
+#mail:hover {
     padding: 10px 100px;
     transition: 1s;
     box-shadow: none;
     letter-spacing: 2px;
 }
 
-#button{
+#button {
     /* font-family: 'Antonio', sans-serif; */
     color: black;
     border: 1px solid lightgray;
@@ -288,19 +288,11 @@ form{
     transition: 1s;
 }
 
-#button:hover{
+#button:hover {
     padding: 4px 12px;
     transition: 0.4s;
     letter-spacing: 1px;
 }
 
-/* footer section nav{
-    background-color: grey;
-    position: fixed;
-    width: 100%;
-    overflow: hidden; 
-}*/
-.wappen2{
-    border-radius: 50%;
-    width: 90px;
+@media only screen and (max-width: 337px) {
 }
